tests/ui/transmutability/arrays/should_require_well_defined_layout.stderr
error[E0277]: `[String; 0]` cannot be safely transmuted into `()`
  --> $DIR/should_require_well_defined_layout.rs:25:52
   |
LL |         assert::is_maybe_transmutable::<repr_rust, ()>();
   |                                                    ^^ analyzing the transmutability of `[String; 0]` is not yet supported
   |
note: required by a bound in `is_maybe_transmutable`
  --> $DIR/should_require_well_defined_layout.rs:12:14
   |
LL |       pub fn is_maybe_transmutable<Src, Dst>()
   |              --------------------- required by a bound in this function
LL |       where
LL |           Dst: TransmuteFrom<Src, {
   |  ______________^
LL | |             Assume::ALIGNMENT
LL | |                 .and(Assume::LIFETIMES)
LL | |                 .and(Assume::SAFETY)
LL | |                 .and(Assume::VALIDITY)
LL | |         }>
   | |__________^ required by this bound in `is_maybe_transmutable`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
